--- a/views/ideas/edit.handlebars
+++ b/views/ideas/edit.handlebars
@@ -8,14 +8,15 @@
 
 <div class="card card-body">
     <h3>Wish Lists</h3>
-    <form action="/ideas" method="POST">
+    <form action="/ideas/{{idea.id}}?_method=PUT" method="POST">
+    <input type="hidden" name="_method" value="PUT">
         <div class="form-group">
             <label for="title">Title</label>
-            <input type="text" class="form-control" name="title" value="{{title}}">
+            <input type="text" class="form-control" name="title" value="{{idea.title}}">
         </div>
         <div class="form-group">
             <label for="details">Details</label>
-            <textarea class="form-control" name="details" >{{details}}</textarea>
+            <textarea class="form-control" name="details" >{{idea.details}}</textarea>
         </div>      
         <button type="submit" class="btn btn-primary">Edit</button>
     </form>
