--- a/views/ideas/index.handlebars
+++ b/views/ideas/index.handlebars
@@ -3,6 +3,10 @@
     <h4>{{title}}</h4>
     <p>{{details}}</p>
     <a href="/ideas/edit/{{id}}" class="btn btn-dark btn-block">Edit</a>
+    <form method="POST" action="/ideas/{{id}}?_method=DELETE">
+        <input type="hidden" name="method" value="DELETE">
+        <input type="submit" class="btn btn-danger btn-block" value="Delete">
+    </form>
 </div>
 {{else}}
 <p>no course yet</p>
