--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,12 @@
 <body>
     {{>_navbar}}
 
-    {{{body}}}
+    <div class="container">
+        {{> _msg}}
+        {{{body}}}
+    </div>
+
+    
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
