--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>SAM</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -14,6 +15,7 @@
 
     <div class="container">
         {{> _msg}}
+        {{> _errors}}
         {{{body}}}
     </div>
 
